# slack_botman

./: README.md  app.py  calculate.py  pyproject.toml  slack_bot.py  test_app.py  test_calculate.py  test_slack_bot.py
