[tool.poetry]
name = "slack-botman"
version = "0.1.0"
description = ""
authors = ["ryku"]
readme = "README.md"
packages = [{include = "slack_botman"}]

[tool.poetry.dependencies]
python = "^3.9"
slack-bolt = "^1.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
